Bug 46885 - LibO crash when creating chart with no cells selected
Summary: LibO crash when creating chart with no cells selected
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
3.5.1 RC1
Hardware: x86 (IA32) All
: medium critical
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.6.0 target:3.5.1 target:6.3.0
Keywords:
: 47088 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-02 03:49 UTC by Leif Lodahl
Modified: 2019-12-07 15:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leif Lodahl 2012-03-02 03:49:36 UTC
When you start a new chart and have one empty cell selected LibO will crash when you select the Next>> button.
If you select multiple empty cells and then start a new chart LibO will crash immediately.

Ubuntu Linux
Comment 1 Leif Lodahl 2012-03-02 04:10:08 UTC
Same problem on Windows XP. On Windows I see an error message. "Because of an unexpected error..."
Comment 2 Not Assigned 2012-03-04 08:21:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6ba126ce26c83a0e6766e8dc8c38202d2a2ab238

don't crash for empty input data in charts, fdo#46885
Comment 4 vitriol 2012-03-08 00:26:41 UTC
*** Bug 47088 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2019-02-06 20:52:11 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c3cfe8f787a659eb6a18bd87cc47e9daa26cec4b%5E%21

uitest for bug tdf#46885

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 raal 2019-12-07 15:20:53 UTC
The test exist, set status to Verified.