don't crash for empty input data in charts, fdo#46885